--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Prerequisites
 *.d
 
+Server_game.vcxproj
+Server_game.vcxproj.filters
+Server_game.vcxproj.user
 # Compiled Object files
 *.slo
 *.lo
